--- a/teamspeak.yml
+++ b/teamspeak.yml
@@ -1,5 +1,5 @@
 ---
-- name: configure latest version of TeamSpeak 3 server
+- name: Configure latest version of TeamSpeak 3 server
   hosts: teamspeak
   remote_user: dima
   become: yes
