changed handler to systemd

--- a/teamspeak.yml
+++ b/teamspeak.yml
@@ -7,6 +7,6 @@
     - teamspeak
   handlers:
   - name: 'restart {{ ts_service }}'
-    service:
+    systemd:
       name: '{{ ts_service | default("ts3server") }}'
       state: restarted
