--- a/roles/teamspeak/handlers/main.yml
+++ b/roles/teamspeak/handlers/main.yml
@@ -5,7 +5,7 @@
 
 - name: report
   mail:
-    to: '{{ ts_admin_email }}'
+    to: '{{ ts_admin_email | default("root@localhost") }}'
     subject: Ansible report
     body: 'TeamSpeak 3 Server {{ inventory_hostname }} has been updatet to {{ latest_determined.stdout }}.'
   delegate_to: localhost
